updated the secondary images, fixed the spacing

--- a/src/App.css
+++ b/src/App.css
@@ -105,3 +105,7 @@
     border: 1px solid;
     color: #4a0a0a;
 }
+.card-container {
+  display: flex;
+  font-family: "Poppins";
+}
